crates/macro/ui-tests/async-errors.stderr
error[E0277]: the trait bound `Result<(), ()>: IntoJsResult` is not satisfied
  --> ui-tests/async-errors.rs:51:24
   |
51 | pub async fn bad1() -> Result<(), ()> {
   |                        ^^^^^^^^^^^^^^ the trait `IntoJsResult` is not implemented for `Result<(), ()>`
   |
   = help: the following other types implement trait `IntoJsResult`:
             Result<(), E>
             Result<T, E>

error[E0277]: the trait bound `Result<(), BadType>: IntoJsResult` is not satisfied
  --> ui-tests/async-errors.rs:55:24
   |
55 | pub async fn bad2() -> Result<(), BadType> {
   |                        ^^^^^^^^^^^^^^^^^^^ the trait `IntoJsResult` is not implemented for `Result<(), BadType>`
   |
   = help: the following other types implement trait `IntoJsResult`:
             Result<(), E>
             Result<T, E>

error[E0277]: the trait bound `wasm_bindgen::JsValue: From<BadType>` is not satisfied
  --> ui-tests/async-errors.rs:59:24
   |
59 | pub async fn bad3() -> BadType {
   |                        ^^^^^^^ the trait `From<BadType>` is not implemented for `wasm_bindgen::JsValue`
   |
   = help: the following other types implement trait `From<T>`:
             `wasm_bindgen::JsValue` implements `From<&String>`
             `wasm_bindgen::JsValue` implements `From<&T>`
             `wasm_bindgen::JsValue` implements `From<&str>`
             `wasm_bindgen::JsValue` implements `From<*const T>`
             `wasm_bindgen::JsValue` implements `From<*mut T>`
             `wasm_bindgen::JsValue` implements `From<Array<T>>`
             `wasm_bindgen::JsValue` implements `From<ArrayBuffer>`
             `wasm_bindgen::JsValue` implements `From<ArrayBufferOptions>`
           and $N others
   = note: required for `BadType` to implement `Into<wasm_bindgen::JsValue>`
   = note: required for `BadType` to implement `IntoJsResult`

error[E0277]: the trait bound `Result<BadType, wasm_bindgen::JsValue>: IntoJsResult` is not satisfied
  --> ui-tests/async-errors.rs:63:24
   |
63 | pub async fn bad4() -> Result<BadType, JsValue> {
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `IntoJsResult` is not implemented for `Result<BadType, wasm_bindgen::JsValue>`
   |
   = help: the following other types implement trait `IntoJsResult`:
             Result<(), E>
             Result<T, E>
